--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ALEC SALUTEM ‖ PORTFOLIO</title>
-    <link rel="icon" htef=".img/aceicon.svg" /> 
+    <link rel="icon" href=".img/aceicon.svg" /> 
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="assets/styles.css" />
   </head>
