--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <link rel="icon" href="img/aceicon.svg" /> 
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="assets/styles.css" />
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+       (function(){
+          emailjs.init({
+            publicKey: "NBHQClWpNbR1plhni",
+          });
+       })();
+    </script>
   </head>
 
   <body>
@@ -255,23 +264,23 @@
       <form action="">
         <div class="input-group">
           <div class="input-box">
-            <input type="text" placeholder="Full Name" required />
-            <input type="email" placeholder="Email" required />
+            <input id="name" type="text" placeholder="Fullname" required />
+            <input id="email" type="email" placeholder="Email" required />
           </div>
 
           <div class="input-box">
-            <input type="number" placeholder="Phone Number" />
-            <input type="text" placeholder="Subject" />
+            <input id="pnumber" type="number" placeholder="Phone Number" />
+            <input id="subject" type="text" placeholder="Subject" />
           </div>
         </div>
 
         <div class="input-group-2">
           <textarea
             name=""
-            id=""
+            id="message"
             cols="30"
             rows="11"
-            placeholder="Your Message"
+            placeholder="Message"
           ></textarea>
           <input type="submit" value="Send Message" class="bttn" />
         </div>
@@ -280,11 +289,11 @@
 
     <footer class="footer">
       <div class="social">
-        <a href="#"><i class="bx bxl-github"></i></a>
-        <a href="#"><i class="bx bxl-linkedin"></i></a>
-        <a href="#"><i class="bx bxl-facebook-circle"></i></a>
-        <a href="#"><i class="bx bxl-instagram"></i></a>
-        <a href="#"><i class="bx bxl-twitter"></i></a>
+        <a href="http://github.com/easieee" target="_blank"><i class="bx bxl-github"></i></a>
+        <a href="https://www.linkedin.com/in/alecsalutem" target="_blank"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.facebook.com/ggeasee/" target="_blank"><i class="bx bxl-facebook-circle"></i></a>
+        <a href="https://www.instagram.com/ggeasee" target="_blank"><i class="bx bxl-instagram"></i></a>
+        <a href="https://x.com/_ggease" target="_blank"><i class="bx bxl-twitter"></i></a>
       </div>
 
       <ul class="list">
