--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             rows="11"
             placeholder="Message"
           ></textarea>
-          <input type="submit" value="Send Message" class="bttn" />
+          <input type="submit" onclick="sendMail()" value="Send Message" class="bttn" />
         </div>
       </form>
     </section>
