--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
     <link rel="icon" href="img/aceicon.svg" /> 
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="assets/styles.css" />
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
-    </script>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"
+    ></script>
     <script type="text/javascript">
-       (function(){
-          emailjs.init({
-            publicKey: "NBHQClWpNbR1plhni",
-          });
-       })();
+      (function () {
+        emailjs.init({
+          publicKey: "NBHQClWpNbR1plhni",
+        });
+      })();
     </script>
   </head>
 
