--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
           </div>
 
           <div class="input-box">
-            <input id="pnumber" type="number" placeholder="Phone Number" />
+            <input id="number" type="number" placeholder="Phone Number" />
             <input id="subject" type="text" placeholder="Subject" />
           </div>
         </div>
